date displays correctly

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <div id="currentDay" class="lead"><!-- Current Day will go here --></div>
+      <div id="currentDay" class="lead"><!-- Current Day here --></div>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
