added time blocks and classes for styling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,105 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>9 AM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>10 AM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>11 AM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>12 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>1 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>2 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>3 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>4 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
+      <div class="row align-items-start time-block">
+        <div class="col-2 hour">
+          <p>5 PM</p>
+        </div>
+        <div class="col-8">
+          <textarea></textarea>
+        </div>
+        <div class="col-2">
+          <button class="saveBtn"><i>Save</i></button>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
