change time block color based on time is done

--- a/index.html
+++ b/index.html
@@ -30,99 +30,99 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="9">
         <div class="col-2 hour">
           <p>9 AM</p>
         </div>
-        <div class="col-8" id="9">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="10">
         <div class="col-2 hour">
           <p>10 AM</p>
         </div>
-        <div class="col-8" id="10">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="11">
         <div class="col-2 hour">
           <p>11 AM</p>
         </div>
-        <div class="col-8" id="11">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="12">
         <div class="col-2 hour">
           <p>12 PM</p>
         </div>
-        <div class="col-8" id="12">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="13">
         <div class="col-2 hour">
           <p>1 PM</p>
         </div>
-        <div class="col-8" id="13">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="14">
         <div class="col-2 hour">
           <p>2 PM</p>
         </div>
-        <div class="col-8" id="14">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="15">
         <div class="col-2 hour">
           <p>3 PM</p>
         </div>
-        <div class="col-8" id="15">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="16">
         <div class="col-2 hour">
           <p>4 PM</p>
         </div>
-        <div class="col-8" id="16">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
           <button class="saveBtn"><i>Save</i></button>
         </div>
       </div>
-      <div class="row align-items-start time-block">
+      <div class="row align-items-start time-block" id="17">
         <div class="col-2 hour">
           <p>5 PM</p>
         </div>
-        <div class="col-8" id="17">
+        <div class="col-8">
           <textarea></textarea>
         </div>
         <div class="col-2">
